--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10275,3 +10275,13 @@ form .row:first-child .floating-label-form-group {
 .bg-port-gore .divider-custom .divider-custom-icon {
     color: white !important;
 }
+
+.mb1{
+    margin-bottom: 1rem;
+}
+.mr1{
+    margin-right: 1rem;
+}
+#concurso img{
+    max-width: 100%;
+}
