Adding new images and fonts

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10248,10 +10248,10 @@ form .row:first-child .floating-label-form-group {
 }
 
 .port-gore{
-    color: #242454
+    color: #28286C
 }
 .bg-port-gore{
-    background-color: #242454 !important;
+    background-color: #28286C !important;
     color: white;
 }
 .navbar.bg-port-gore{
