Changing fonts and contest image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10135,7 +10135,7 @@ h3 {
     line-height: 3.5rem;
   }
   .masthead .masthead-subheading {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 }
 .portfolio .portfolio-item {
@@ -10284,4 +10284,36 @@ form .row:first-child .floating-label-form-group {
 }
 #concurso img{
     max-width: 100%;
+}
+
+@font-face {
+    font-family: heller;
+    src: url(../fonts/Jeff_Levine-HellerSansJNL.otf);
+}
+
+@font-face {
+    font-family: gotham;
+    src: url(../fonts/Gotham-Bold.otf);
+    font-weight: 600;
+}
+@font-face {
+    font-family: gotham;
+    src: url(../fonts/Gotham-Book.otf);
+    font-weight: 400;
+}
+@font-face {
+    font-family: gotham;
+    src: url(../fonts/Gotham-Light.otf);
+    font-weight: 200;
+}
+
+h1.masthead-heading{
+    font-family: heller;
+}
+
+body,
+#mainNav,
+h2,
+*{
+    font-family: gotham;
 }
