--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10317,3 +10317,102 @@ h2,
 *{
     font-family: gotham;
 }
+
+#games,
+#games li{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+#games{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+#games li{
+    list-style: none;
+    flex: 0 0 33.333333%;
+    padding: 1% 1% 0;
+}
+
+#games li img{
+    max-width: 100%;
+}
+
+/*
+Flip card
+*/
+.card-flip {
+    background: none;
+    border: none;
+    padding: 0;
+}
+.card-flip .card {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transition: transform 300ms;
+    transition-timing-function: linear;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+.card-flip .card:first-of-type {
+    transform: rotateY(0deg);
+}
+.card-flip .card:last-of-type {
+    transform: rotateY(180deg);
+    position: absolute;
+    top: 0;
+    display: flex;
+}
+.card-flip:hover .card:first-of-type {
+    transform: rotateY(-180deg);
+}
+.card-flip:hover .card:last-of-type {
+    transform: rotateY(0deg);
+}
+
+.card-img,
+.card-img-top,
+.card-img-bottom {
+    min-width: 100%;
+    height: 28vh;
+
+    max-height: 188px;
+    background-size: cover;
+}
+.card-title{
+    background-color: #00000073;
+    width: 100%;
+    text-align: center;
+    padding: .75rem 1.25rem;
+}
+.card-img-overlay{
+    padding: 0
+}
+h4, .h4{
+    font-size: 1rem;
+}
+
+.card .card-text{
+    font-size: .85rem;
+}
+strong.title{
+    font-size: 1rem;
+}
+.card .btn-bar{
+    margin-top: .7rem;
+    display: inline-block;
+}
+.text-black{
+    color:black
+}
+
+.card.bg-primary{
+    background-color: #fec605 !important;
+}
+.card,
+.card-img {
+    border-radius: 0;
+}
