--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10314,7 +10314,8 @@ h1.masthead-heading{
 body,
 #mainNav,
 h2,
-*{
+*,
+.sponsor-grid__description p{
     font-family: gotham;
 }
 
@@ -10415,4 +10416,240 @@ strong.title{
 .card,
 .card-img {
     border-radius: 0;
+}
+
+
+
+/*
+SPONSORS
+*/
+
+body,
+* {
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+.sponsor-grid {
+  position: relative;
+  font-size: 0;
+}
+.sponsor-grid__container {
+  max-width: 1000px;
+  margin: 2rem auto;
+  background-color: white;
+  /* #444; */
+  /* box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.16), 0 2px 3px 0 rgba(0, 0, 0, 0.26); */
+}
+@media (max-width: 1016px) {
+  .sponsor-grid__container {
+    max-width: 800px;
+  }
+}
+@media (max-width: 816px) {
+  .sponsor-grid__container {
+    max-width: 600px;
+  }
+}
+@media (max-width: 616px) {
+  .sponsor-grid__container {
+    max-width: 400px;
+  }
+}
+@media (max-width: 416px) {
+  .sponsor-grid__container {
+    max-width: 200px;
+  }
+}
+.sponsor-grid__item {
+  padding: 2em;
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  vertical-align: top;
+  transition: margin-bottom 0.3s ease;
+  border-right: 1px solid #dcdcdc;
+}
+.sponsor-grid__item:nth-child(n+6) {
+  border-top: 1px solid #dcdcdc;
+}
+.sponsor-grid__item:nth-child(5), .sponsor-grid__item:last-child {
+  border-right: 0;
+}
+@media (max-width: 1016px) {
+  .sponsor-grid__item:nth-child(5) {
+    border-right: 1px solid #dcdcdc;
+  }
+  .sponsor-grid__item:nth-child(4n) {
+    border-right: 0;
+  }
+  .sponsor-grid__item:nth-child(n+5) {
+    border-top: 1px solid #dcdcdc;
+  }
+}
+@media (max-width: 816px) {
+  .sponsor-grid__item:nth-child(5), .sponsor-grid__item:nth-child(4n) {
+    border-right: 1px solid #dcdcdc;
+  }
+  .sponsor-grid__item:nth-child(3n) {
+    border-right: 0;
+  }
+  .sponsor-grid__item:nth-child(n+4) {
+    border-top: 1px solid #dcdcdc;
+  }
+}
+@media (max-width: 616px) {
+  .sponsor-grid__item:nth-child(5), .sponsor-grid__item:nth-child(4n), .sponsor-grid__item:nth-child(3n) {
+    border-right: 1px solid #dcdcdc;
+  }
+  .sponsor-grid__item:nth-child(2n) {
+    border-right: 0;
+  }
+  .sponsor-grid__item:nth-child(n+3) {
+    border-top: 1px solid #dcdcdc;
+  }
+  .sponsor-grid__item:nth-child(n+5) {
+    margin-top: 1px;
+  }
+}
+@media (max-width: 416px) {
+  .sponsor-grid__item {
+    border-right: 0;
+  }
+  .sponsor-grid__item:nth-child(n+2) {
+    border-top: 1px solid #dcdcdc;
+  }
+  .sponsor-grid__item:nth-child(n+4) {
+    margin-top: 1px;
+  }
+}
+.sponsor-grid__logo {
+  background-color: #eee;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  position: relative;
+  transition: background-color 0.8s ease;
+}
+.sponsor-grid__logo__center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sponsor-grid__logo img {
+  max-width: 95%;
+}
+.sponsor-grid__logo .icon {
+  font-size: 1rem;
+  position: absolute;
+  bottom: 1em;
+  transition: transform 0.3s ease;
+}
+.sponsor-grid__logo .rotate-arrow {
+  transform: rotate(180deg);
+}
+.sponsor-grid__expander {
+  position: absolute;
+  background: #ddd;
+  top: auto;
+  left: 0;
+  width: 100%;
+  text-align: left;
+  height: auto;
+  overflow: hidden;
+  visibility: hidden;
+  opacity: 0;
+  transition: height 0.5s ease, opacity 0.5s ease, visibility 0.5s ease;
+  display: flex;
+  box-sizing: border-box;
+}
+.sponsor-grid__expander div {
+  flex: 1 1 50%;
+}
+.sponsor-grid__description {
+  box-sizing: border-box;
+  padding: 30px;
+}
+.sponsor-grid__description h4 {
+  font-size: 24px;
+}
+.sponsor-grid__description p {
+  font-size: 1rem;
+}
+.sponsor-grid__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sponsor-grid__img img {
+  max-width: 100%;
+}
+
+.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.delay {
+  transition-delay: 0.5s;
+}
+
+.sponsor-background--color {
+  background-color: #fec605;
+}
+
+.snap {
+  height: auto;
+  max-height: 4000px;
+}
+
+a{
+    color: #00a0c1;
+}
+
+.sponsor-grid__description .iframe{
+    text-align: center;
+}
+.sponsor-grid__description .iframe iframe{
+    display: inline-block;
+    border: 0;
+}
+
+html, body{min-height:100%;}
+body{height:100vh;}
+
+@media (max-width: 991.98px) {
+    #games li{
+        flex: 0 0 50%;
+    }
+}
+@media (max-width: 767.98px) {
+    #games li{
+        flex: 0 0 100%;
+    }
+
+    #contest-buttons{
+        text-align: center;
+
+
+    }
+    #contest-buttons a:first-child{
+        margin-right: 0;
+        margin-top:4rem;
+    }
+    #contest-buttons a{
+       margin-top:1rem;
+       display: block;
+    }
+}
+@media (max-width: 416px){
+.sponsor-grid__container {
+    max-width: 100%;
+    background-color: #eeeeee;
+    text-align: center;
+}
+.sponsor-grid__item{
+
+}
 }
