--- a/game/css/main.css
+++ b/game/css/main.css
@@ -43,6 +43,7 @@ label {
     align-items: center;
     display: flex;
     justify-content: center;
+    min-height: 60px;
 }
 #locations li{
     opacity: .5;
