--- a/game/css/main.css
+++ b/game/css/main.css
@@ -56,7 +56,7 @@ label {
 }
 
 #activeClue {
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   text-align: center;
 }
 #clueText {
@@ -82,12 +82,56 @@ label {
 
 #activeClue img,
 #activeClue div {
-  max-height: 450px;
+  max-height: 400px;
   max-width: 800px;
 
   /*
   */
   /* border: 1px solid black; */
+}
+.card-flip,
+.card-img {
+  min-height: 450px;
+  background-size: cover;
+}
+.card-flip iframe {
+  display: none;
+}
+.card-flip:hover iframe {
+  display: block !important;
+  margin: 0 auto;
+  width: 70%;
+  height: 70%;
+}
+.card-text {
+  width: 100%;
+  height: 100%;
+}
+.iframe-container {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.back-card {
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #29286d;
+  background-image: url(../images/back-clue.jpg);
 }
 #activeClue div,
 #activeClue a {
