RFixing UI error with accumulatedError on start and adding flip card on click

--- a/game/css/main.css
+++ b/game/css/main.css
@@ -97,7 +97,7 @@ label {
 .card-flip iframe {
   display: none;
 }
-.card-flip:hover iframe {
+.card-flip.active iframe {
   display: block !important;
   margin: 0 auto;
   width: 70%;
